cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 14)
project(Quesa_SDL CXX)

find_package(SDL2 REQUIRED)
find_package(OpenGL REQUIRED)

include_directories(
    ${SDL2_INCLUDE_DIRS}
    ${OPENGL_INCLUDE_DIR}
    Development/Source/Core/Geometry
    Development/Source/Core/Support
    Development/Source/Core/System
    Development/Source/FileFormats
    Development/Source/FileFormats/Readers/3DMF
    Development/Source/FileFormats/Writers/3DMF
    Development/Source/Renderers/Common
    Development/Source/Renderers/Generic
    Development/Source/Renderers/MakeStrip
    Development/Source/Renderers/OpenGL
    SDK/Includes/Quesa
)

add_library(${PROJECT_NAME}
    Development/Source/Core/Geometry/E3Geometry.cpp
    Development/Source/Core/Geometry/E3Geometry.h
    Development/Source/Core/Geometry/E3GeometryBox.cpp
    Development/Source/Core/Geometry/E3GeometryBox.h
    Development/Source/Core/Geometry/E3GeometryCone.cpp
    Development/Source/Core/Geometry/E3GeometryCone.h
    Development/Source/Core/Geometry/E3GeometryCylinder.cpp
    Development/Source/Core/Geometry/E3GeometryCylinder.h
    Development/Source/Core/Geometry/E3GeometryDisk.cpp
    Development/Source/Core/Geometry/E3GeometryDisk.h
    Development/Source/Core/Geometry/E3GeometryEllipse.cpp
    Development/Source/Core/Geometry/E3GeometryEllipse.h
    Development/Source/Core/Geometry/E3GeometryEllipsoid.cpp
    Development/Source/Core/Geometry/E3GeometryEllipsoid.h
    Development/Source/Core/Geometry/E3GeometryGeneralPolygon.cpp
    Development/Source/Core/Geometry/E3GeometryGeneralPolygon.h
    Development/Source/Core/Geometry/E3GeometryLine.cpp
    Development/Source/Core/Geometry/E3GeometryLine.h
    Development/Source/Core/Geometry/E3GeometryMarker.cpp
    Development/Source/Core/Geometry/E3GeometryMarker.h
    Development/Source/Core/Geometry/E3GeometryMesh.cpp
    Development/Source/Core/Geometry/E3GeometryMesh.h
    Development/Source/Core/Geometry/E3GeometryNURBCurve.cpp
    Development/Source/Core/Geometry/E3GeometryNURBCurve.h
    Development/Source/Core/Geometry/E3GeometryNURBPatch.cpp
    Development/Source/Core/Geometry/E3GeometryNURBPatch.h
    Development/Source/Core/Geometry/E3GeometryPixmapMarker.cpp
    Development/Source/Core/Geometry/E3GeometryPixmapMarker.h
    Development/Source/Core/Geometry/E3GeometryPoint.cpp
    Development/Source/Core/Geometry/E3GeometryPoint.h
    Development/Source/Core/Geometry/E3GeometryPolygon.cpp
    Development/Source/Core/Geometry/E3GeometryPolygon.h
    Development/Source/Core/Geometry/E3GeometryPolyhedron.cpp
    Development/Source/Core/Geometry/E3GeometryPolyhedron.h
    Development/Source/Core/Geometry/E3GeometryPolyLine.cpp
    Development/Source/Core/Geometry/E3GeometryPolyLine.h
    Development/Source/Core/Geometry/E3GeometryTorus.cpp
    Development/Source/Core/Geometry/E3GeometryTorus.h
    Development/Source/Core/Geometry/E3GeometryTriangle.cpp
    Development/Source/Core/Geometry/E3GeometryTriangle.h
    Development/Source/Core/Geometry/E3GeometryTriGrid.cpp
    Development/Source/Core/Geometry/E3GeometryTriGrid.h
    Development/Source/Core/Geometry/E3GeometryTriMesh.cpp
    Development/Source/Core/Geometry/E3GeometryTriMesh.h
    Development/Source/Core/Geometry/E3GeometryTriMeshOptimize.cpp
    Development/Source/Core/Geometry/E3GeometryTriMeshOptimize.h
    Development/Source/Core/Glue/QD3DCamera.cpp
    Development/Source/Core/Glue/QD3DCustomElements.cpp
    Development/Source/Core/Glue/QD3DDrawContext.cpp
    Development/Source/Core/Glue/QD3DErrors.cpp
    Development/Source/Core/Glue/QD3DExtension.cpp
    Development/Source/Core/Glue/QD3DGeometry.cpp
    Development/Source/Core/Glue/QD3DGroup.cpp
    Development/Source/Core/Glue/QD3DIO.cpp
    Development/Source/Core/Glue/QD3DLight.cpp
    Development/Source/Core/Glue/QD3DMain.cpp
    Development/Source/Core/Glue/QD3DMath.cpp
    Development/Source/Core/Glue/QD3DMemory.cpp
    Development/Source/Core/Glue/QD3DPick.cpp
    Development/Source/Core/Glue/QD3DRenderer.cpp
    Development/Source/Core/Glue/QD3DSet.cpp
    Development/Source/Core/Glue/QD3DShader.cpp
    Development/Source/Core/Glue/QD3DStorage.cpp
    Development/Source/Core/Glue/QD3DString.cpp
    Development/Source/Core/Glue/QD3DStyle.cpp
    Development/Source/Core/Glue/QD3DTransform.cpp
    Development/Source/Core/Glue/QD3DView.cpp
    Development/Source/Core/Support/E3ArrayOrList.cpp
    Development/Source/Core/Support/E3ArrayOrList.h
    Development/Source/Core/Support/E3ClassTree.cpp
    Development/Source/Core/Support/E3ClassTree.h
    Development/Source/Core/Support/E3Compatibility.cpp
    Development/Source/Core/Support/E3Compatibility.h
    Development/Source/Core/Support/E3Debug.h
    Development/Source/Core/Support/E3ErrorManager.cpp
    Development/Source/Core/Support/E3ErrorManager.h
    Development/Source/Core/Support/E3FastArray.h
    Development/Source/Core/Support/E3Globals.cpp
    Development/Source/Core/Support/E3Globals.h
    Development/Source/Core/Support/E3HashTable.cpp
    Development/Source/Core/Support/E3HashTable.h
    Development/Source/Core/Support/E3Pool.cpp
    Development/Source/Core/Support/E3Pool.h
    Development/Source/Core/Support/E3Prefix.h
    Development/Source/Core/Support/E3SafeCompare.hpp
    Development/Source/Core/Support/E3StackCrawl.h
    Development/Source/Core/Support/E3System.cpp
    Development/Source/Core/Support/E3System.h
    Development/Source/Core/Support/E3Tessellate.cpp
    Development/Source/Core/Support/E3Tessellate.h
    Development/Source/Core/Support/E3Utils.cpp
    Development/Source/Core/Support/E3Utils.h
    Development/Source/Core/Support/E3Version.h
    Development/Source/Core/System/E3Camera.cpp
    Development/Source/Core/System/E3Camera.h
    Development/Source/Core/System/E3CustomElements.cpp
    Development/Source/Core/System/E3CustomElements.h
    Development/Source/Core/System/E3DrawContext.cpp
    Development/Source/Core/System/E3DrawContext.h
    Development/Source/Core/System/E3Errors.cpp
    Development/Source/Core/System/E3Errors.h
    Development/Source/Core/System/E3Extension.cpp
    Development/Source/Core/System/E3Extension.h
    Development/Source/Core/System/E3Group.cpp
    Development/Source/Core/System/E3Group.h
    Development/Source/Core/System/E3IO.cpp
    Development/Source/Core/System/E3IO.h
    Development/Source/Core/System/E3IOData.cpp
    Development/Source/Core/System/E3IOData.h
    Development/Source/Core/System/E3Light.cpp
    Development/Source/Core/System/E3Light.h
    Development/Source/Core/System/E3Main.cpp
    Development/Source/Core/System/E3Main.h
    Development/Source/Core/System/E3Math.cpp
    Development/Source/Core/System/E3Math.h
    Development/Source/Core/System/E3Math_Intersect.cpp
    Development/Source/Core/System/E3Math_Intersect.h
    Development/Source/Core/System/E3Memory.cpp
    Development/Source/Core/System/E3Memory.h
    Development/Source/Core/System/E3Pick.cpp
    Development/Source/Core/System/E3Pick.h
    Development/Source/Core/System/E3Renderer.cpp
    Development/Source/Core/System/E3Renderer.h
    Development/Source/Core/System/E3Set.cpp
    Development/Source/Core/System/E3Set.h
    Development/Source/Core/System/E3Shader.cpp
    Development/Source/Core/System/E3Shader.h
    Development/Source/Core/System/E3Storage.cpp
    Development/Source/Core/System/E3Storage.h
    Development/Source/Core/System/E3String.cpp
    Development/Source/Core/System/E3String.h
    Development/Source/Core/System/E3Style.cpp
    Development/Source/Core/System/E3Style.h
    Development/Source/Core/System/E3Texture.cpp
    Development/Source/Core/System/E3Texture.h
    Development/Source/Core/System/E3Transform.cpp
    Development/Source/Core/System/E3Transform.h
    Development/Source/Core/System/E3View.cpp
    Development/Source/Core/System/E3View.h
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF.cpp
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF.h
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF_Bin.cpp
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF_Bin.h
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF_Geometry.cpp
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF_Geometry.h
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF_Text.cpp
    Development/Source/FileFormats/Readers/3DMF/E3FFR_3DMF_Text.h
    Development/Source/FileFormats/Writers/3DMF/E3FFW_3DMFBin_Geometry.cpp
    Development/Source/FileFormats/Writers/3DMF/E3FFW_3DMFBin_Geometry.h
    Development/Source/FileFormats/Writers/3DMF/E3FFW_3DMFBin_Register.cpp
    Development/Source/FileFormats/Writers/3DMF/E3FFW_3DMFBin_Register.h
    Development/Source/FileFormats/Writers/3DMF/E3FFW_3DMFBin_Writer.cpp
    Development/Source/FileFormats/Writers/3DMF/E3FFW_3DMFBin_Writer.h
    Development/Source/FileFormats/E3IOFileFormat.cpp
    Development/Source/FileFormats/E3IOFileFormat.h
    Development/Source/Renderers/Common/GLCamera.cpp
    Development/Source/Renderers/Common/GLCamera.h
    Development/Source/Renderers/Common/GLDrawContext.cpp
    Development/Source/Renderers/Common/GLDrawContext.h
    Development/Source/Renderers/Common/GLGPUSharing.cpp
    Development/Source/Renderers/Common/GLGPUSharing.h
    Development/Source/Renderers/Common/GLImmediateVBO.cpp
    Development/Source/Renderers/Common/GLImmediateVBO.h
    Development/Source/Renderers/Common/GLPrefix.h
    Development/Source/Renderers/Common/GLShadowVolumeManager.cpp
    Development/Source/Renderers/Common/GLShadowVolumeManager.h
    Development/Source/Renderers/Common/GLTextureLoader.cpp
    Development/Source/Renderers/Common/GLTextureLoader.h
    Development/Source/Renderers/Common/GLTextureManager.cpp
    Development/Source/Renderers/Common/GLTextureManager.h
    Development/Source/Renderers/Common/GLUtils.cpp
    Development/Source/Renderers/Common/GLUtils.h
    Development/Source/Renderers/Common/GLVBOManager.cpp
    Development/Source/Renderers/Common/GLVBOManager.h
    Development/Source/Renderers/Common/OptimizedTriMeshElement.cpp
    Development/Source/Renderers/Common/OptimizedTriMeshElement.h
    Development/Source/Renderers/Generic/GNGeometry.cpp
    Development/Source/Renderers/Generic/GNGeometry.h
    Development/Source/Renderers/Generic/GNPrefix.h
    Development/Source/Renderers/Generic/GNRegister.cpp
    Development/Source/Renderers/Generic/GNRegister.h
    Development/Source/Renderers/Generic/GNRenderer.cpp
    Development/Source/Renderers/Generic/GNRenderer.h
    Development/Source/Renderers/MakeStrip/MakeStrip.cpp
    Development/Source/Renderers/MakeStrip/MakeStrip.h
    Development/Source/Renderers/MakeStrip/StripMaker.h
    Development/Source/Renderers/MakeStrip/StripMaker_FindAdjacencies.cpp
    Development/Source/Renderers/MakeStrip/StripMaker_FreeFaceSet.cpp
    Development/Source/Renderers/MakeStrip/StripMaker_InitFaces.cpp
    Development/Source/Renderers/MakeStrip/StripMaker_JoinStrips.cpp
    Development/Source/Renderers/MakeStrip/StripMaker_MakeSimpleStrip.cpp
    Development/Source/Renderers/OpenGL/QOCalcTriMeshEdges.cpp
    Development/Source/Renderers/OpenGL/QOCalcTriMeshEdges.h
    Development/Source/Renderers/OpenGL/QOClientStates.cpp
    Development/Source/Renderers/OpenGL/QOClientStates.h
    Development/Source/Renderers/OpenGL/QOGeometry.cpp
    Development/Source/Renderers/OpenGL/QOGLShadingLanguage.cpp
    Development/Source/Renderers/OpenGL/QOGLShadingLanguage.h
    Development/Source/Renderers/OpenGL/QOGLSLShaders.cpp
    Development/Source/Renderers/OpenGL/QOGLSLShaders.h
    Development/Source/Renderers/OpenGL/QOLights.cpp
    Development/Source/Renderers/OpenGL/QOLights.h
    Development/Source/Renderers/OpenGL/QOMatrix.cpp
    Development/Source/Renderers/OpenGL/QOMatrix.h
    Development/Source/Renderers/OpenGL/QOOpaqueTriBuffer.cpp
    Development/Source/Renderers/OpenGL/QOOpaqueTriBuffer.h
    Development/Source/Renderers/OpenGL/QOPrefix.h
    Development/Source/Renderers/OpenGL/QORegister.cpp
    Development/Source/Renderers/OpenGL/QORegister.h
    Development/Source/Renderers/OpenGL/QORenderer.cpp
    Development/Source/Renderers/OpenGL/QORenderer.h
    Development/Source/Renderers/OpenGL/QOShaderProgramCache.cpp
    Development/Source/Renderers/OpenGL/QOShaderProgramCache.h
    Development/Source/Renderers/OpenGL/QOShadowMarker.cpp
    Development/Source/Renderers/OpenGL/QOShadowMarker.h
    Development/Source/Renderers/OpenGL/QOStartAndEnd.cpp
    Development/Source/Renderers/OpenGL/QOStatics.cpp
    Development/Source/Renderers/OpenGL/QOStatics.h
    Development/Source/Renderers/OpenGL/QOTexture.cpp
    Development/Source/Renderers/OpenGL/QOTexture.h
    Development/Source/Renderers/OpenGL/QOTransBuffer.cpp
    Development/Source/Renderers/OpenGL/QOTransBuffer.h
    Development/Source/Renderers/OpenGL/QOUpdate.cpp
    SDK/Includes/Quesa/CQ3ObjectRef.h
    SDK/Includes/Quesa/CQ3ObjectRef_Gets.h
    SDK/Includes/Quesa/CQ3WeakObjectRef.h
    SDK/Includes/Quesa/Q3GroupIterator.h
    SDK/Includes/Quesa/Quesa.h
    SDK/Includes/Quesa/QuesaCamera.h
    SDK/Includes/Quesa/QuesaCustomElements.h
    SDK/Includes/Quesa/QuesaDrawContext.h
    SDK/Includes/Quesa/QuesaErrors.h
    SDK/Includes/Quesa/QuesaExtension.h
    SDK/Includes/Quesa/QuesaGeometry.h
    SDK/Includes/Quesa/QuesaGroup.h
    SDK/Includes/Quesa/QuesaIO.h
    SDK/Includes/Quesa/QuesaLight.h
    SDK/Includes/Quesa/QuesaMath.h
    SDK/Includes/Quesa/QuesaMathOperators.hpp
    SDK/Includes/Quesa/QuesaMemory.h
    SDK/Includes/Quesa/QuesaPick.h
    SDK/Includes/Quesa/QuesaRenderer.h
    SDK/Includes/Quesa/QuesaSet.h
    SDK/Includes/Quesa/QuesaShader.h
    SDK/Includes/Quesa/QuesaStorage.h
    SDK/Includes/Quesa/QuesaString.h
    SDK/Includes/Quesa/QuesaStyle.h
    SDK/Includes/Quesa/QuesaTransform.h
    SDK/Includes/Quesa/QuesaView.h
    Development/Source/Platform/SDL/E3SDLDebug.cpp
    Development/Source/Platform/SDL/E3SDLDrawContext.cpp
    Development/Source/Platform/SDL/E3SDLStackCrawl.cpp
    Development/Source/Platform/SDL/E3SDLSystem.cpp
)

set_target_properties(${PROJECT_NAME}
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/SDK/Libraries/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_BUILD_TYPE}"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/SDK/Libraries/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_BUILD_TYPE}"
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/SDK/Libraries/${CMAKE_SYSTEM_NAME}/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_BUILD_TYPE}"
)

target_compile_definitions(${PROJECT_NAME} PRIVATE
    QUESA_OS_SDL
    $<$<BOOL:${WIN32}>:
        WIN32_LEAN_AND_MEAN
        QD3D_NO_DIRECTDRAW
        NOUSER  # bypass win32 macros that tack an A or W to the end of "RegisterClass"
        _CRT_SECURE_NO_WARNINGS
    >
    $<$<BOOL:${APPLE}>:GL_SILENCE_DEPRECATION>
)

if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        /FIiso646.h
        /W3
        /EHa            # C++ may throw exceptions from extern "C" functions
        /wd4068         # Disable unknown #pragma warning for VC++
    )
else()
    target_compile_options(${PROJECT_NAME} PRIVATE
        #-Wall
        #-Wextra
        -Wshadow
        -Wno-multichar
        -Wno-unused-function
        -Wno-unused-parameter
        -Wno-unused-variable
        -Wno-unknown-pragmas
        -fexceptions
	)
endif()

target_include_directories(${PROJECT_NAME} PUBLIC SDK/Includes/Quesa)
